samples/_failures_safe/1761151304_2dd0ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a68cc9a9.c: In function ‘main’:
./samples/SAFE/__tmp_a68cc9a9.c:145:17: error: expected expression at end of input
  145 |                 int result = execute_graph_operation(
      |                 ^~~
./samples/SAFE/__tmp_a68cc9a9.c:145:30: error: too few arguments to function ‘execute_graph_operation’
  145 |                 int result = execute_graph_operation(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a68cc9a9.c:113:5: note: declared here
  113 | int execute_graph_operation(GraphOperation op, Graph *g, int start, int end) {
      |     ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a68cc9a9.c:145:17: error: expected declaration or statement at end of input
  145 |                 int result = execute_graph_operation(
      |                 ^~~
./samples/SAFE/__tmp_a68cc9a9.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a68cc9a9.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a68cc9a9.c:145:17: error: expected declaration or statement at end of input
